# rust-html-archive

./: .env.template  .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: env.rs  file.rs  main.rs  util.rs
template/: archive-item.html  archive.html  recent-post.html  single.html  template.html
