[package]
name = "tombo-archive"
version = "0.1.0"
authors = ["Tom Gardiner <tom@tombofry.co.uk>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
dotenv = "0.15.0"
env_logger = "0.8.2"
log = "0.4.11"
regex = "1.4.2"
rss = "2.0.0"
