[package]
name = "html-archive"
version = "0.1.0"
authors = ["moonfloof <git@moonfloof.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.19"
regex = { version ="1.8.4", default-features = false, features = ["std", "unicode-gencat"] }
rss = "2.0.4"
